--- a/html/dumpRoot.html
+++ b/html/dumpRoot.html
@@ -61,17 +61,8 @@
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class=""><a href="#"><i class="fa fa-refresh"></i> Empezar Tour</a> </li>
-                    <li class=""><a href="#"><i class="fa fa-bell"></i> <span class="badge">9</span></a> </li>
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" data-target="#dropOpt"
-                            href="#">Opciones
-                        </a>
-                    </li>
-                    <ul class="dropdown-menu" style="position: absolute" id='dropOpt'>
-                        <li> <a href="#"><i class="fa fa-user"></i> Perfil</a> </li>
-                        <li> <a href="#"><i class="fa fa-cog"></i> Preferencias</a> </li>
-                        <li> <a href="javascript:logout()"><i class="fa fa-power-off"></i> Salir</a> </li>
-                    </ul>
+                    <li> <a href="#"><i class="fa fa-user"></i> Perfil</a> </li>
+                    <li> <a href="javascript:logout()"><i class="fa fa-power-off"></i> Salir</a> </li>
                 </ul>
             </div>
         </div>
@@ -83,15 +74,11 @@
             <div class="hide-sidebar" id="show-nav">
                 <ul id="side" class="side-nav">
                     <li class="panel">
-                        <a id="panel1" href="javascript:;" data-toggle="collapse" data-target="#Dashboard"> <i
-                                class="fa fa-home"></i> Inicio
-                            <i class="fa fa-chevron-left pull-right" id="arow1"></i> </a>
-                        <ul class="collapse nav" id="Dashboard">
-                            <li> <a href="javascript:goToStart()" id="history"><i
-                                        class="fa fa-angle-double-right"></i>Organizaciones</a> </li>
-                            <li> <a href="javascript:goToUsr()" id="bills"><i
-                                        class="fa fa-angle-double-right"></i>Usuarios</a> </li>
-                        </ul>
+                        <a href="javascript:goToStart();"> <i class="fa fa-home"></i> Inicio</a>
+                    </li>
+                    <li class="panel">
+                        <a href="javascript:goToUsr()" id="history"><i class="fa fa-users-cog"></i>
+                            Usuarios</a> 
                     </li>
                 </ul>
             </div>
@@ -144,4 +131,5 @@
             </div>
         </div>
         <script src="/javascripts/dumpRoot.js" type="text/javascript"></script>
+
 </html>
