--- a/html/adminRootViewOnly.html
+++ b/html/adminRootViewOnly.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>DOCSYS - Vista Organizaciones</title>
+    <META Cache-control>
+    <META HTTP-EQUIV="Expires" CONTENT="-1">
+    <title>DOCSYS - Organizaciones</title>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
@@ -26,6 +28,23 @@
 </head>
 
 <body>
+    <div class="loader-wraper">
+        <div class="loader">
+            <div class="duo duo1">
+                <div class="dot dot-a"></div>
+                <div class="dot dot-b"></div>
+            </div>
+            <div class="duo duo2">
+                <div class="dot dot-a"></div>
+                <div class="dot dot-b"></div>
+            </div>
+            <br /><br />
+            <p>Cargando...</p>
+        </div>
+        <div style="text-align: center; margin-top: calc(100vh - 80px);">
+            <p>Recargue la pagina si este mensaje no desaparece en 5 segundos.</p>
+        </div>
+    </div>
     <nav class="navbar navbar-inverse top-bar navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -36,23 +55,14 @@
                     <span class="icon-bar"></span>
                 </button> <span class="menu-icon" id="menu-icon" style="line-height: 30px; width: 50px"><i
                         class="fa fa-bars" aria-hidden="true" id="chang-menu-icon"></i></span>
-                <a class="navbar-brand mx-auto mx-auto-top" href="http://localhost:3000"
+                <a class="navbar-brand mx-auto mx-auto-top" href="javascript:goToStart()"
                     style="text-shadow: 0 0 5px black, 0 0 10px rgba(0,0,0,.3);color: white; font-size: 30px; vertical-align: middle; line-height: 30px">DOC<span
                         style="text-shadow: 0 0 3.5px black; color: #3399ff">SYS</span></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class=""><a href="#"><i class="fa fa-refresh"></i> Empezar Tour</a> </li>
-                    <li class=""><a href="#"><i class="fa fa-bell"></i> <span class="badge">9</span></a> </li>
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" data-target="#dropOpt"
-                            href="#">Opciones
-                        </a>
-                    </li>
-                    <ul class="dropdown-menu" style="position: absolute" id='dropOpt'>
-                        <li> <a href="#"><i class="fa fa-user"></i> Perfil</a> </li>
-                        <li> <a href="#"><i class="fa fa-cog"></i> Preferencias</a> </li>
-                        <li> <a href="javascript:logout()"><i class="fa fa-power-off"></i> Salir</a> </li>
-                    </ul>
+                    <li id="profileLink"> <a href="javascript:goToProfile()"><i class="fa fa-user"></i> Perfil</a> </li>
+                    <li> <a href="javascript:logout()"><i class="fa fa-power-off"></i> Salir</a> </li>
                 </ul>
             </div>
         </div>
@@ -64,13 +74,9 @@
             <div class="hide-sidebar" id="show-nav">
                 <ul id="side" class="side-nav">
                     <li class="panel">
-                        <a id="panel1" href="javascript:;" data-toggle="collapse" data-target="#Dashboard"> <i
-                                class="fa fa-home"></i> Inicio
-                            <i class="fa fa-chevron-left pull-right" id="arow1"></i> </a>
-                        <ul class="collapse nav" id="Dashboard">
-                            <li> <a href="javascript:goToStart()" id="bills"><i class="fa fa-angle-double-right"></i> Organizaciones</a> </li>
-                        </ul>
-                    </li>
+                        <a href="javascript:goToUsr()" id="history"><i class="fa fa-users-cog"></i>Usuarios</a> </li>
+                    <li class="panel">
+                        <a id="panel9" href="javascript:goToDump()"> <i class="fa fa-trash"></i> Papelera de reciclaje </a> </li>
                 </ul>
             </div>
             <!-- END SIDE NAV USER PANEL -->
@@ -81,7 +87,7 @@
             <div class="row">
                 <div class="col-md-12" id='navigation'>
                     <ol class="breadcrumb">
-                        <li><i class="fa fa-home"></i><a href=""> Inicio </a></li>
+                        <li><i class="fa fa-home"></i><a href="javascript:goToStart()"> Inicio </a></li>
                         <li>Mesa de trabajo</li>
                     </ol>
                 </div>
@@ -91,7 +97,7 @@
                 <div class="col-md-12">
                     <div class="main-header">
                         <h2>Mesa de trabajo</h2>
-                        <em>Vista de Organizaciones</em>
+                        <em id="usrName">Organizaciones</em>
                     </div>
                 </div>
             </div>
@@ -113,9 +119,7 @@
                 </tbody>
             </table>
         </div>
-
-
+        
         <script src="/javascripts/adminRootViewOnly.js" type="text/javascript"></script>
-        <script src="/javascripts/indexUsr.js" type="text/javascript"></script>
 
 </html>
