--- a/html/dumpRoot.html
+++ b/html/dumpRoot.html
@@ -55,13 +55,13 @@
                     <span class="icon-bar"></span>
                 </button> <span class="menu-icon" id="menu-icon" style="line-height: 30px; width: 50px"><i
                         class="fa fa-bars" aria-hidden="true" id="chang-menu-icon"></i></span>
-                <a class="navbar-brand mx-auto mx-auto-top" href="http://localhost:3000"
+                <a class="navbar-brand mx-auto mx-auto-top" href="javascript:goToStart()"
                     style="text-shadow: 0 0 5px black, 0 0 10px rgba(0,0,0,.3);color: white; font-size: 30px; vertical-align: middle; line-height: 30px">DOC<span
                         style="text-shadow: 0 0 3.5px black; color: #3399ff">SYS</span></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li> <a href="#"><i class="fa fa-user"></i> Perfil</a> </li>
+                    <li id="profileLink"> <a href="javascript:goToProfile()"><i class="fa fa-user"></i> Perfil</a> </li>
                     <li> <a href="javascript:logout()"><i class="fa fa-power-off"></i> Salir</a> </li>
                 </ul>
             </div>
