--- a/html/login.html
+++ b/html/login.html
@@ -40,6 +40,7 @@
         background: #f2f2f6;
         height: 100%;
         width: 100%;
+        overflow: hidden;
         box-sizing: border-box;
         display: flex;
         flex-direction: column;
