--- a/html/fileManagement.html
+++ b/html/fileManagement.html
@@ -26,7 +26,7 @@
     <script src="/javascripts/jquery-confirm/jquery-confirm.min.js"></script>
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="/javascripts/DataTables/DataTables-1.10.18/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" href="/javascripts/DataTables/responsive-2.2.2/css/responsive.bootstrap4.min.css">
+    <link rel="stylesheet" href="/javascripts/DataTables/Responsive-2.2.2/css/responsive.bootstrap4.min.css">
     <link rel="stylesheet" href="/javascripts/jquery-confirm/jquery-confirm.min.css">
 
 </head>
@@ -826,7 +826,7 @@
                                 var file = window.URL.createObjectURL(result.slice(0, result.size, window.cntnt));
                                 if (window.isonMIME) {
                                     if (window.dnld == '0') {
-                                        self.setContent(`<iframe style="width:100%;height:50px;" src="http://localhost:3000/noPreviewSize.html"><h1></h1></iframe><br> ${getTableData(e)[0].outerHTML}`)
+                                        self.setContent(`<iframe style="width:100%;height:50px;" src="/noPreviewSize.html"><h1></h1></iframe><br> ${getTableData(e)[0].outerHTML}`)
                                         self.$$formSubmit.prop('disabled', false)
                                         self.$$formSubmit.html('Descargar')
                                         return
@@ -838,12 +838,12 @@
                                     }
                                 }
                                 else {
-                                    self.setContent(`<iframe style="width:100%;height:50px;" src="http://localhost:3000/noPreview.html"><h1></h1></iframe><br> ${getTableData(e)[0].outerHTML}`)
+                                    self.setContent(`<iframe style="width:100%;height:50px;" src="/noPreview.html"><h1></h1></iframe><br> ${getTableData(e)[0].outerHTML}`)
                                 }
                                 self.$$formSubmit.prop('disabled', false)
                                 self.$$formSubmit.html('Descargar')
                             } catch (ex) {
-                                self.setContent(`<iframe style="width:100%;height:68px;" src="http://localhost:3000/noPreviewOnEdge.html"><h1></h1></iframe><br> ${getTableData(e)[0].outerHTML}`)
+                                self.setContent(`<iframe style="width:100%;height:68px;" src="/noPreviewOnEdge.html"><h1></h1></iframe><br> ${getTableData(e)[0].outerHTML}`)
                                 self.$$formSubmit.prop('disabled', false)
                                 self.$$formSubmit.html('Descargar')
                                 console.log("Constructable ReadableStream not supported");
